Fixed search-input outgrowing search-input-field

--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -45,7 +45,7 @@
 .search-input{
     background-color: #1f1e1f;
     border: none;
-    width: 100%;
+    flex: 1;
     outline: none;
     color: white;
 }
