--- a/src/styles.scss
+++ b/src/styles.scss
@@ -43,7 +43,8 @@ body {
     font-family: "Source Sans Pro", sans-serif !important;
     font-weight: 300;
     font-size: 1rem;
-    line-height: 1.65;
+	line-height: 1.65;
+	overflow-x: hidden;
 }
 
 //headings
