Added spells section to navbar

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -42,6 +42,14 @@
                 </a>
             </li>
 
+            <!-- Spells -->
+            <li class="nav-item">
+                <a routerLink="{{ routingService.getRoutePath('spells')}}" class="nav-link"> 
+                    <span class="nav-link-text mr-3">Spells</span> 
+                    <i class="fa fa-bolt fa-2x" aria-hidden="true"></i>
+                </a>
+            </li>
+
             <!-- Rules -->
             <li class="nav-item">
                 <a routerLink="{{ routingService.getRoutePath('rules')}}" class="nav-link"> 
