Adjusted spells for small iphone screens

--- a/src/app/components/articles/spells/spells.component.html
+++ b/src/app/components/articles/spells/spells.component.html
@@ -70,7 +70,7 @@
                     </div>
                     <!-- Damage/Effect -->
                     <div class="col-md-3 col-6 d-flex flex-column spell">
-                        <strong class="border-bottom-grey column-heading">DAMAGE/EFFECT</strong>
+                        <strong class="border-bottom-grey column-heading">EFFECT</strong>
                         <div class="column-body" *ngIf="spell.damage"> {{ (spell.damage) }} </div>
                         <div class="column-body placeholder" *ngIf="!spell.damage"> Placeholder </div>
                     </div>
