--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-md navbar-dark bg-dark p-0">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark p-0">
     <!-- Brand -->
     <a routerLink="{{ routingService.getRoutePath('home1') }}" class="navbar-brand mx-5">
         <strong> Aldrune Wiki </strong>
