Added "locked Button" to forms
Forms now have a fake submit button on them with a lock icon that represents that the form is not correctly filled out until the user has a valid filled out form.

--- a/src/app/components/utility/formly-formcontainer/formly-formcontainer.component.html
+++ b/src/app/components/utility/formly-formcontainer/formly-formcontainer.component.html
@@ -1,6 +1,20 @@
 <!-- Form -->
 <form [formGroup]="form" enctype="{{enctype}}">
     <formly-form [form]="form" [fields]="fields" [model]="model"></formly-form>
-    <div class="btn btn-dark mr-3" (click)="onCancel()">Cancel</div>
-    <div class="btn btn-secondary" (click)="onSubmit()">Submit</div>
+    <div class="btn btn-dark mr-3" (click)="onCancel()">
+        Cancel
+    </div>
+    <div 
+    class="btn btn-secondary" 
+    [ngClass]="{'d-none': form.valid, 'strikethrough': !form.valid}"
+    placement="top" 
+    ngbTooltip="The form is not yet correctly filled out!"
+    >
+        <i class="fa fa-lock mr-2" aria-hidden="true"></i>
+        Submit *
+    </div>
+
+    <div class="btn btn-secondary" (click)="onSubmit()" [ngClass]="{'d-none': !form.valid}">
+        Submit
+    </div>
 </form>
