--- a/src/app/components/utility/textfield/textfield.component.html
+++ b/src/app/components/utility/textfield/textfield.component.html
@@ -1,10 +1,13 @@
 <!-- Heading -->
-<h4 [innerHTML]="heading" class="d-inline"></h4>
-<h4 [ngClass]="{'d-none': !userHasUpdatePermission(), 'd-inline': userHasUpdatePermission()}">
-    <i *ngIf="!isEditState" (click)="enableEdit()" class="fa icon fa-pencil ml-2"></i>
-    <i *ngIf="isEditState" (click)="cancelEdit()" class="fa icon fa-times ml-2"></i>
-    <i *ngIf="isEditState" (click)="finishEdit()" class="fa icon fa-check ml-2"></i>
-</h4>
+<div *ngIf="heading">
+    <h4 [innerHTML]="heading" class="d-inline"></h4>
+    <h4 [ngClass]="{'d-none': !userHasUpdatePermission(), 'd-inline': userHasUpdatePermission()}">
+        <i *ngIf="!isEditState && allowEdit" (click)="enableEdit()" class="fa icon fa-pencil ml-2"></i>
+        <i *ngIf="isEditState" (click)="cancelEdit()" class="fa icon fa-times ml-2"></i>
+        <i *ngIf="isEditState" (click)="finishEdit()" class="fa icon fa-check ml-2"></i>
+    </h4>
+</div>
+
 <!-- Text Body -->
 <form class="mt-2">
     <div class="textfield">
