Added CSS classes to highlight a specific item on hover

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -373,6 +373,13 @@ strong{
 	font-weight: bold;
 }
 
+.hover-highlight{
+	transition: 0.2s background-color;
+}
+
+.hover-highlight:hover{
+	background-color: rgba(61, 70, 77, 0.85);
+}
 
 
 // Overwriting styling of ngx-bootstrap Datepicker
