--- a/src/app/components/articles/session-audio-update/session-audio-update.component.html
+++ b/src/app/components/articles/session-audio-update/session-audio-update.component.html
@@ -12,27 +12,32 @@
             </h2>
         </div>
 
-        <ng-template #createState>
-            <app-edit-toggle 
-            [isInUpdateState]=true 
-            [link]="routingService.getRoutePath('sessionaudio-overview')"
-            ></app-edit-toggle>
+        <div *ngIf="!isWaitingForResponse; else loading">
+            <!-- Form -->
+            <app-formly-formcontainer 
+            [model]="model" 
+            [fields]="fields" 
+            (submit)="onSubmit()" 
+            (cancel)="onCancel()"
+            ></app-formly-formcontainer>
+        </div>
 
-            <h2 class="text-center">
-                Uploading Session Audio File
-            </h2>
-        </ng-template>
 
 
-        <!-- Form -->
-        <app-formly-formcontainer 
-        [model]="model" 
-        [fields]="fields" 
-        (submit)="onSubmit()" 
-        (cancel)="onCancel()"
-        ></app-formly-formcontainer>
+
     </article>
 
     <!-- Spinner while loading -->
     <ng-template #loading class="mb-4"> <app-spinner></app-spinner> </ng-template> 
 </div>
+
+<ng-template #createState>
+    <app-edit-toggle 
+    [isInUpdateState]=true 
+    [link]="routingService.getRoutePath('sessionaudio-overview')"
+    ></app-edit-toggle>
+
+    <h2 class="text-center">
+        Uploading Session Audio File
+    </h2>
+</ng-template>
