--- a/src/app/components/articles/diaryentry-article/diaryentry-article.component.html
+++ b/src/app/components/articles/diaryentry-article/diaryentry-article.component.html
@@ -8,25 +8,27 @@
         <!-- Heading -->
         <div class="row">
             <h1 class="text-center col">
-                Diary Entry # {{ diaryEntry.session_details.name }}
+                Diary Entry # {{ diaryEntry.session_details.session_number }} <br>
+                {{ diaryEntry.title }}
             </h1>
         </div>
         <div class="row">
-            <p class="text-center mb-5 col"> Written by: {{ diaryEntry.author_details.name }} </p>
+            <p class="text-center mb-5 col"> Written by: {{ getAuthorString() }}
+            </p>
         </div>
 
-        <!-- Diaryentry-Text -->
-        <div class="mb-5">
-            <app-textfield 
-            [initialText]="diaryEntry.entry"
-            [heading]="diaryEntry.session_details.session_date | date"
-            (updateText)="onDescriptionUpdate($event)"
-            ></app-textfield>
-        </div>
+        <!-- DiaryEntry Text In Encounters -->
+        <app-diary-entry-encounter-list
+        [diaryEntry]="diaryEntry"
+        ></app-diary-entry-encounter-list>
+
+        <!-- Add encounter button -->
+
+
 
         <!-- Footer (Move to other Article + Delete Article) -->
         <app-article-footer
-        (delete)="deleteArticle()"
+        (delete)="deleteDiaryEntry()"
         [link]="routingService.getRoutePath('diaryentry-overview')"
         [label]="'Back to Diaryentries'"
         [deleteMessage]="'Delete this Diaryentry?'"
