--- a/src/styles.scss
+++ b/src/styles.scss
@@ -373,6 +373,10 @@ strong{
 	font-weight: bold;
 }
 
+.highlight{
+	background-color: rgba(61, 70, 77, 0.85);
+}
+
 .hover-highlight{
 	transition: 0.2s background-color;
 }
