--- a/src/app/components/utility/diary-entry-encounter-list/diary-entry-encounter-list.component.html
+++ b/src/app/components/utility/diary-entry-encounter-list/diary-entry-encounter-list.component.html
@@ -1,30 +1,44 @@
 <div class="container px-0" *ngIf="!isWaitingForResponse; else waiting">
+    <div class="row mb-5">
+        <div class="col-4"></div>
+        <div class="col-4 btn btn-secondary" (click)="toggleDiaryEntryView()">
+            Currently viewing as : 
+            <span *ngIf="diaryEntryView"> Diary entry </span>
+            <span *ngIf="!diaryEntryView"> Encounter list </span>
+        </div>
+        <div class="col-4"></div>
+    </div>
+
     <!-- Insert new first Encounter -->
-    <div class="expand col-12 d-flex justify-content-center">
+    <div *ngIf="!diaryEntryView" class="expand col-12 d-flex justify-content-center">
         <div>
             <div class="btn btn-secondary">
                 <i class="fa fa-3x fa-plus pointer" (click)="toggleEncounterCreateState(-1)"></i>
             </div>
         </div>
     </div>
-    <!-- Diaryentry - Encounters -->
-    <div *ngFor="let encounter of encounters; let encounterIndex = index" class="row">
-        <!-- Encounters -->
-        <app-diary-entry-encounter
-        class="col-12 px-0"
-        [encounter]="encounter"
-        [encounterIndex]="encounterIndex"
-        (encounterDelete)="deleteEncounter(encounterIndex)"
-        (encounterOrderIncrease)="onEncounterOrderIncrease(encounterIndex)"
-        (encounterOrderDecrease)="onEncounterOrderDecrease(encounterIndex)"
-        (encounterCreate)="onEncounterCreate(encounterIndex)"
-        ></app-diary-entry-encounter>
 
-        <!-- Insert new Encounter -->
-        <div class="expand col-12 d-flex justify-content-center">
-            <div>
-                <div class="btn btn-secondary">
-                    <i class="fa fa-3x fa-plus pointer" (click)="toggleEncounterCreateState(encounterIndex)"></i>
+    <!-- Diaryentry - Encounters -->
+    <div class="row">
+        <div *ngFor="let encounter of encounters; let encounterIndex = index">
+            <!-- Encounters -->
+            <app-diary-entry-encounter
+            class="col-12 px-0"
+            [encounter]="encounter"
+            [encounterIndex]="encounterIndex"
+            [diaryEntryView]="diaryEntryView"
+            (encounterDelete)="deleteEncounter(encounterIndex)"
+            (encounterOrderIncrease)="onEncounterOrderIncrease(encounterIndex)"
+            (encounterOrderDecrease)="onEncounterOrderDecrease(encounterIndex)"
+            (encounterCreate)="onEncounterCreate(encounterIndex)"
+            ></app-diary-entry-encounter>
+    
+            <!-- Insert new Encounter -->
+            <div *ngIf="!diaryEntryView" class="expand col-12 d-flex justify-content-center">
+                <div>
+                    <div class="btn btn-secondary">
+                        <i class="fa fa-3x fa-plus pointer" (click)="toggleEncounterCreateState(encounterIndex)"></i>
+                    </div>
                 </div>
             </div>
         </div>
