--- a/src/app/components/utility/diary-entry-encounter-list/diary-entry-encounter-list.component.scss
+++ b/src/app/components/utility/diary-entry-encounter-list/diary-entry-encounter-list.component.scss
@@ -5,13 +5,16 @@
 
 .expand:hover .btn{
     visibility: visible;
+    padding: 0.75rem 1.5rem;
 }
 
 .expand{
     transition: height 0.2s;
-    height: 3rem;
+    display: flex;
+    align-items: center;
+    height: 2rem;
 }
 
 .expand:hover{
-    height: 6rem;
+    height: 8rem;
 }
