--- a/src/app/components/utility/diary-entry-encounter/diary-entry-encounter.component.html
+++ b/src/app/components/utility/diary-entry-encounter/diary-entry-encounter.component.html
@@ -5,7 +5,7 @@ class="container"
     <!-- Encounter Heading -->
     <div class="row">
         <h4 class="heading col-12">
-            {{ encounter.connection.order_index }} - {{ encounter.title }}
+            {{ encounter.title }}
     
             <!-- Edit Toggler -->
             <div 
