--- a/src/app/components/utility/quote-gallery/quote-gallery.component.html
+++ b/src/app/components/utility/quote-gallery/quote-gallery.component.html
@@ -71,6 +71,7 @@
             <i class="fa fa-pencil fa-1-5x icon mx-3" [ngClass]="{'d-none': !userHasUpdatePermission()}" (click)="toggleEditState()"></i>
             <i class="fa fa-plus fa-1-5x icon mx-3" [ngClass]="{'d-none': !userHasCreatePermission()}" (click)="toggleCreateState()"></i>
             <i class="fa fa-trash fa-1-5x icon mx-3" [ngClass]="{'d-none': !userHasDeletePermission()}" (click)="inDeleteState=true"></i>
+            <i class="fa fa-th-list fa-1-5x icon mx-3" title="See all quotes" routerLink="{{ routingService.getRoutePath('quote-overview', {name: character.name}) }}"></i>
         </div>
     </div>
 </div>
