--- a/src/app/components/articles/quote-overview/quote-overview.component.html
+++ b/src/app/components/articles/quote-overview/quote-overview.component.html
@@ -1,75 +1,36 @@
 <div class="main">
-    <article class="container" *ngIf="quotes; else loading">
+    <article class="container" *ngIf="quotes && character; else loading">
         <h3 class="text-center"> Quote Overview </h3>
+        <h5 class="text-center"> 
+            Quotes of: 
+            <a routerLink="{{routingService.getRoutePath('character', {name: character.name}) }}">
+                {{ character.name }}
+            </a>
+        </h5>
 
-        <div *ngFor="let quote of quotes" class="mb-3">
+        <div class="btn btn-secondary my-3" (click)="toggleQuoteCreateState()"> Add Quote </div>
+
+        <div *ngFor="let quote of quotes; let quoteIndex = index" class="mb-5">
             <!-- Quote Heading -->
-            <h4>{{ quote.session_details.name }} </h4>
-            
+            <h4 *ngIf="quote.pk"> Session {{ quote.session_details.session_number }} </h4>
+            <h4 *ngIf="!quote.pk"> Create Quote </h4>
+
             <!-- Quote Body -->
-            <blockquote>
-                <!-- Quote -->
-                <div [innerHTML]="quote.quote"></div>
-    
-                <!-- Quote Description -->
-                <div class="mb-3 ml-4">
-                    <span *ngIf="quote.description" [innerHTML]="'- ' + quote.description"></span>
-                </div>
-    
-                <!-- Quote Connections -->
-                <div class="quote-connections d-flex row icon-container">
-                    <span class="col-md-2 col-4 tag-label"> Characters: </span>
-    
-                    <span class="d-inline-flex align-items-center flex-wrap">
-                        <!-- Display Existing Quote Connections -->
-                        <span class="badge badge-secondary mr-2 text-center vanish-container" *ngFor="let connection of quote.connections">
-                            <a routerLink="{{ routingService.getRoutePath('character', {name: connection.character_details.name}) }}">
-                                {{connection.character_details.name}}
-                            </a>
-                            
-                            <i 
-                            class="fa fa-trash icon vanish-icon ml-2" 
-                            (click)="deleteQuoteConnection(connection)" 
-                            [ngClass]="{'d-none': !userHasDeletePermission()}"
-                            ></i>
-                        </span>
-    
-                        <!-- Form for Creating Quote Connections -->
-                        <form [ngClass]="{'d-none':!inQuoteConnectionCreateState, 'd-inline-block': inQuoteConnectionCreateState}">
-                            <select class="form-control" name="character" id="character" [(ngModel)]="baseQuoteConnection.character">
-                                <option 
-                                *ngFor="let character of characters" 
-                                value="{{character.pk}}" 
-                                [attr.disabled]="hasConnection(character) ? true : null"
-                                >
-                                    {{character.name}}
-                                </option>
-                            </select>
-                        </form>
-    
-                        <i 
-                        class="fa icon mx-2"
-                        [ngClass]="{
-                            'fa-plus hide-icon': !inQuoteConnectionCreateState, 
-                            'fa-times': inQuoteConnectionCreateState, 
-                            'd-none': !userHasCreatePermission()
-                        }"
-                        (click)="toggleQuoteConnectionCreateState()"
-                        ></i>
-    
-                        <i
-                        class="fa icon"
-                        [ngClass]="{
-                            'fa-check': inQuoteConnectionCreateState, 
-                            'd-none': !userHasCreatePermission()
-                        }" 
-                        (click)="createQuoteConnection()"
-                        ></i>
-                    </span>
-                </div>
-            </blockquote>    
+            <app-quotefield
+            [character]="character"
+            [quote]="quote"
+            (delete)="deleteQuote(quoteIndex)"
+            ></app-quotefield>
         </div>
 
+
+        <div class="col-md-3 px-0">
+            <a
+            routerLink="{{this.character.getAbsoluteRouterUrl()}}" 
+            class="btn btn-secondary w-100">
+                Back to {{ character.name }}
+            </a>
+        </div>
     </article>
 
     <!-- Loading Spinner -->
