--- a/src/app/components/articles/character-article/character-article.component.html
+++ b/src/app/components/articles/character-article/character-article.component.html
@@ -53,7 +53,9 @@
         ></app-image-gallery>
 
         <!-- Quote -->
-        <app-quote-gallery [character]="character"></app-quote-gallery>
+        <div class="mb-3">
+            <app-quote-gallery [character]="character"></app-quote-gallery>
+        </div>
 
         <!-- Description -->
         <div class="mb-5">
