Minor CSS upgrades

--- a/src/app/components/utility/quotefield/quotefield.component.html
+++ b/src/app/components/utility/quotefield/quotefield.component.html
@@ -13,8 +13,8 @@
             <hr class="white-line">
 
             <!-- Quote Connections -->
-            <div class="quote-connections d-flex row icon-container">
-                <span class="col-md-2 col-4 tag-label"> Characters: </span>
+            <div class="quote-connections d-inline icon-container">
+                <span class="tag-label mr-2"> Characters: </span>
 
                 <span class="d-inline-flex align-items-center flex-wrap">
                     <!-- Display Existing Quote Connections -->
