--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,6 @@
+//Fonts
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300italic,600italic,300,600");
+
 // Overwriting leaflet CSS
 h5.popup-heading{
 	color: black;
