Implemented and enhanced cutting feature

--- a/src/app/components/utility/diary-entry-encounter-list/diary-entry-encounter-list.component.html
+++ b/src/app/components/utility/diary-entry-encounter-list/diary-entry-encounter-list.component.html
@@ -31,9 +31,9 @@
             <app-diary-entry-encounter
             *ngIf="!isEncounterUpdating[encounterIndex] else waiting;"
             class="col-12 px-0"
-            [ngClass]="{'isBeingCutOut': cutEncounterIndex === encounterIndex}"
             [encounter]="encounter"
             [encounterIndex]="encounterIndex"
+            [cutEncounterIndex]="cutEncounterIndex"
             [diaryEntryView]="diaryEntryView"
             (encounterDelete)="deleteEncounter(encounterIndex)"
             (encounterOrderIncrease)="onEncounterOrderIncrease(encounterIndex)"
