--- a/src/app/components/utility/file-upload/file-upload.component.html
+++ b/src/app/components/utility/file-upload/file-upload.component.html
@@ -1,1 +1,3 @@
-<p>file-upload works!</p>
+<div class="form-group"> 
+    <input type="file" [formControl]="formControl" [formlyAttributes]="field">
+</div>
